Fix item horizontal alignments

--- a/static/src/stylesheets/module/facia-cards/item-layouts/_fc-item--full.scss
+++ b/static/src/stylesheets/module/facia-cards/item-layouts/_fc-item--full.scss
@@ -20,7 +20,7 @@ Full item. A 100% width version of the Three quarter item.
 
 @mixin fc-item--full {
 
-    @include fc-item--horizontal(75%);
+    @include fc-item--horizontal(74%);
 
     .fc-item__header {
         @include fs-headline(3, true);
