--- a/static/src/stylesheets/module/facia-cards/item-layouts/_fc-item--three-quarters.scss
+++ b/static/src/stylesheets/module/facia-cards/item-layouts/_fc-item--three-quarters.scss
@@ -23,7 +23,7 @@ Three quarter item. Looks like a wide standard, a bit like this:
 
 @mixin fc-item--three-quarters {
 
-    @include fc-item--horizontal(100% / 3 * 2);
+    @include fc-item--horizontal(65.5%);
 
     .fc-item__header {
         @include mq(desktop) {
